atg-dev/src/objects/App_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Triggers_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if all triggers are disabled</description>
        <inlineHelpText>Shows if all triggers are disabled</inlineHelpText>
        <label>Triggers Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if all the validation rules are disabled</description>
        <inlineHelpText>Shows if all the validation rules are disabled</inlineHelpText>
        <label>Validation Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflows_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if all the workflows are disabled</description>
        <inlineHelpText>Shows if all the workflows are disabled</inlineHelpText>
        <label>Workflows Disabled</label>
        <type>Checkbox</type>
    </fields>
    <label>App Settings</label>
</CustomObject>